--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exceljs": "^4.4.0",
     "fs": "^0.0.1-security",
     "gh-pages": "^6.1.0",
+    "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
